[{"level":"info","ts":"2021-10-24T16:34:29.804-0300","caller":"core/core.go:35","msg":"startup","service":"GRAVACAO","GOMAXPROCS":4},
{"level":"info","ts":"2021-10-24T16:34:29.804-0300","caller":"core/core.go:40","msg":"startup","service":"GRAVACAO","config":"{Build:cli Gravacao:{Port:12346},},"},
{"level":"info","ts":"2021-10-24T16:34:29.804-0300","caller":"core/core.go:46","msg":"startup","service":"GRAVACAO","version":"develop"},
{"level":"info","ts":"2021-10-24T16:34:29.804-0300","caller":"core/core.go:55","msg":"startup","service":"GRAVACAO","status":"initializing API support"},
{"level":"info","ts":"2021-10-24T16:34:29.805-0300","caller":"core/core.go:87","msg":"startup","service":"GRAVACAO","status":"gRPC server started"},
{"level":"info","ts":"2021-10-24T16:36:11.535-0300","caller":"zap/grpclogger.go:92","msg":"[core]parsed scheme: \"\"","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:36:11.536-0300","caller":"zap/grpclogger.go:92","msg":"[core]scheme \"\" not registered, fallback to default scheme","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:36:11.538-0300","caller":"zap/grpclogger.go:92","msg":"[core]ccResolverWrapper: sending update to cc: {[{localhost:12346  <nil> 0 <nil>},] <nil> <nil>},","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:36:11.539-0300","caller":"zap/grpclogger.go:92","msg":"[core]ClientConn switching balancer to \"pick_first\"","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:36:11.540-0300","caller":"zap/grpclogger.go:92","msg":"[core]Channel switches to new LB policy \"pick_first\"","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:36:11.540-0300","caller":"zap/grpclogger.go:92","msg":"[core]Subchannel Connectivity change to CONNECTING","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:36:11.540-0300","caller":"zap/grpclogger.go:92","msg":"[core]Subchannel picks a new address \"localhost:12346\" to connect","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:36:11.540-0300","caller":"zap/grpclogger.go:92","msg":"[core]pickfirstBalancer: UpdateSubConnState: 0xc00051e460, {CONNECTING <nil>},","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:36:11.540-0300","caller":"zap/grpclogger.go:92","msg":"[core]Channel Connectivity change to CONNECTING","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:36:11.542-0300","caller":"zap/grpclogger.go:92","msg":"[core]Subchannel Connectivity change to READY","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:36:11.543-0300","caller":"zap/grpclogger.go:92","msg":"[core]pickfirstBalancer: UpdateSubConnState: 0xc00051e460, {READY <nil>},","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:36:11.543-0300","caller":"zap/grpclogger.go:92","msg":"[core]Channel Connectivity change to READY","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:36:11.557-0300","caller":"grpc/server.go:289","msg":"Updated veiculos","service":"GRAVACAO","veiculos":["ABC0000","ABC0001"]},
{"level":"info","ts":"2021-10-24T16:36:11.557-0300","caller":"grpc/server.go:121","msg":"Gerencia registered","service":"GRAVACAO","params":"armazenamento:\"/home/filipe/1\" horas_retencao:1 endereco_ip:\"localhost\" porta:12346 db_host:\"localhost\" db_user:\"postgres\" db_name:\"vigia\" db_disable_tls:true"},
{"level":"info","ts":"2021-10-24T16:36:11.557-0300","caller":"zap/options.go:212","msg":"finished unary call with code OK","service":"GRAVACAO","grpc.start_time":"2021-10-24T16:36:11-03:00","system":"grpc","span.kind":"server","grpc.service":"gravacao.Gravacao","grpc.method":"Registrar","peer.address":"127.0.0.1:53886","grpc.code":"OK","grpc.time_ms":35.26100158691406},
{"level":"error","ts":"2021-10-24T16:36:26.220-0300","caller":"grpc/server.go:65","msg":"Could not register gerencia","service":"GRAVACAO","error":"already registered gerencia service"},
{"level":"info","ts":"2021-10-24T16:36:26.221-0300","caller":"zap/options.go:212","msg":"finished unary call with code AlreadyExists","service":"GRAVACAO","grpc.start_time":"2021-10-24T16:36:26-03:00","system":"grpc","span.kind":"server","grpc.service":"gravacao.Gravacao","grpc.method":"Registrar","peer.address":"127.0.0.1:53886","error":"rpc error: code = AlreadyExists desc = already registered gerencia service","grpc.code":"AlreadyExists","grpc.time_ms":0.7680000066757202},
{"level":"info","ts":"2021-10-24T16:36:43.883-0300","caller":"grpc/server.go:250","msg":"Started processos","service":"GRAVACAO","processos":["d03307d4-2b28-4c23-a004-3da32e5b8a61"]},
{"level":"info","ts":"2021-10-24T16:36:43.883-0300","caller":"zap/options.go:212","msg":"finished unary call with code OK","service":"GRAVACAO","grpc.start_time":"2021-10-24T16:36:43-03:00","system":"grpc","span.kind":"server","grpc.service":"gravacao.Gravacao","grpc.method":"StartProcessos","peer.address":"127.0.0.1:53886","grpc.code":"OK","grpc.time_ms":28.554000854492188},
{"level":"info","ts":"2021-10-24T16:36:44.405-0300","caller":"grpc/server.go:141","msg":"Vehicle found","service":"GRAVACAO","registro_id":"1d71cf63-3e56-450a-9ec6-7b40d71f8af4"},
{"level":"error","ts":"2021-10-24T16:36:44.407-0300","caller":"grpc/server.go:144","msg":"Could not call Match","service":"GRAVACAO","error":"could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"info","ts":"2021-10-24T16:36:44.912-0300","caller":"grpc/server.go:141","msg":"Vehicle found","service":"GRAVACAO","registro_id":"5f46fee5-8258-4001-a4b7-806bad1c1288"},
{"level":"error","ts":"2021-10-24T16:36:44.912-0300","caller":"grpc/server.go:144","msg":"Could not call Match","service":"GRAVACAO","error":"could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"error","ts":"2021-10-24T16:36:51.559-0300","caller":"grpc/server.go:133","msg":"Error received","service":"GRAVACAO","error":"srv[] reg[1d71cf63-3e56-450a-9ec6-7b40d71f8af4]: could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"error","ts":"2021-10-24T16:36:51.561-0300","caller":"grpc/server.go:136","msg":"Could not call ErrorReport","service":"GRAVACAO","error":"could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"error","ts":"2021-10-24T16:37:01.560-0300","caller":"grpc/server.go:133","msg":"Error received","service":"GRAVACAO","error":"srv[] reg[5f46fee5-8258-4001-a4b7-806bad1c1288]: could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"error","ts":"2021-10-24T16:37:01.562-0300","caller":"grpc/server.go:136","msg":"Could not call ErrorReport","service":"GRAVACAO","error":"could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"error","ts":"2021-10-24T16:37:11.559-0300","caller":"grpc/server.go:133","msg":"Error received","service":"GRAVACAO","error":"srv[] reg[1d71cf63-3e56-450a-9ec6-7b40d71f8af4]: could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"error","ts":"2021-10-24T16:37:11.561-0300","caller":"grpc/server.go:136","msg":"Could not call ErrorReport","service":"GRAVACAO","error":"could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"error","ts":"2021-10-24T16:37:21.559-0300","caller":"grpc/server.go:133","msg":"Error received","service":"GRAVACAO","error":"srv[] reg[5f46fee5-8258-4001-a4b7-806bad1c1288]: could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"error","ts":"2021-10-24T16:37:21.561-0300","caller":"grpc/server.go:136","msg":"Could not call ErrorReport","service":"GRAVACAO","error":"could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"error","ts":"2021-10-24T16:37:31.560-0300","caller":"grpc/server.go:133","msg":"Error received","service":"GRAVACAO","error":"srv[] reg[1d71cf63-3e56-450a-9ec6-7b40d71f8af4]: could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"error","ts":"2021-10-24T16:37:31.561-0300","caller":"grpc/server.go:136","msg":"Could not call ErrorReport","service":"GRAVACAO","error":"could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"error","ts":"2021-10-24T16:37:41.559-0300","caller":"grpc/server.go:133","msg":"Error received","service":"GRAVACAO","error":"srv[] reg[5f46fee5-8258-4001-a4b7-806bad1c1288]: could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"error","ts":"2021-10-24T16:37:41.560-0300","caller":"grpc/server.go:136","msg":"Could not call ErrorReport","service":"GRAVACAO","error":"could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"error","ts":"2021-10-24T16:37:51.558-0300","caller":"grpc/server.go:133","msg":"Error received","service":"GRAVACAO","error":"srv[] reg[1d71cf63-3e56-450a-9ec6-7b40d71f8af4]: could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"error","ts":"2021-10-24T16:37:51.559-0300","caller":"grpc/server.go:136","msg":"Could not call ErrorReport","service":"GRAVACAO","error":"could not call gerencia gRPC server: rpc error: code = Unimplemented desc = unknown service gerencia.Gerencia"},
{"level":"info","ts":"2021-10-24T16:37:52.034-0300","caller":"grpc/server.go:263","msg":"Stopped processos","service":"GRAVACAO","processos":["d03307d4-2b28-4c23-a004-3da32e5b8a61"]},
{"level":"info","ts":"2021-10-24T16:37:52.035-0300","caller":"zap/options.go:212","msg":"finished unary call with code OK","service":"GRAVACAO","grpc.start_time":"2021-10-24T16:37:51-03:00","system":"grpc","span.kind":"server","grpc.service":"gravacao.Gravacao","grpc.method":"StopProcessos","peer.address":"127.0.0.1:53886","grpc.code":"OK","grpc.time_ms":293.91900634765625},
{"level":"info","ts":"2021-10-24T16:37:59.426-0300","caller":"grpc/server.go:214","msg":"Gerencia service unregistered","service":"GRAVACAO"},
{"level":"info","ts":"2021-10-24T16:37:59.427-0300","caller":"zap/options.go:212","msg":"finished unary call with code OK","service":"GRAVACAO","grpc.start_time":"2021-10-24T16:37:59-03:00","system":"grpc","span.kind":"server","grpc.service":"gravacao.Gravacao","grpc.method":"RemoverRegistro","peer.address":"127.0.0.1:53886","grpc.code":"OK","grpc.time_ms":0.7419999837875366},
{"level":"info","ts":"2021-10-24T16:57:14.436-0300","caller":"core/core.go:99","msg":"shutdown","service":"GRAVACAO","status":"shutdown started","signal":"interrupt"},
{"level":"info","ts":"2021-10-24T16:57:14.437-0300","caller":"zap/grpclogger.go:92","msg":"[core]Subchannel Connectivity change to CONNECTING","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:57:14.437-0300","caller":"zap/grpclogger.go:92","msg":"[transport]transport: loopyWriter.run returning. connection error: desc = \"transport is closing\"","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:57:14.440-0300","caller":"zap/grpclogger.go:92","msg":"[core]pickfirstBalancer: UpdateSubConnState: 0xc00051e460, {CONNECTING <nil>},","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:57:14.440-0300","caller":"zap/grpclogger.go:92","msg":"[core]Channel Connectivity change to CONNECTING","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:57:14.440-0300","caller":"zap/grpclogger.go:92","msg":"[core]Subchannel picks a new address \"localhost:12346\" to connect","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:57:14.440-0300","caller":"zap/grpclogger.go:92","msg":"[transport]transport: loopyWriter.run returning. connection error: desc = \"transport is closing\"","service":"GRAVACAO","system":"grpc","grpc_log":true},
{"level":"info","ts":"2021-10-24T16:57:14.441-0300","caller":"core/core.go:105","msg":"shutdown","service":"GRAVACAO","status":"shutdown complete","signal":"interrupt"},
{"level":"info","ts":"2021-10-24T16:57:14.441-0300","caller":"core/core.go:105","msg":"shutdown complete","service":"GRAVACAO"},
{"level":"info","ts":"2021-10-24T16:57:14.441-0300","caller":"zap/grpclogger.go:92","msg":"[transport]transport: loopyWriter.run returning. connection error: desc = \"transport is closing\"","service":"GRAVACAO","system":"grpc","grpc_log":true}]